--- a/letter.html
+++ b/letter.html
@@ -23,10 +23,10 @@
 
     <div class="letter-area" contenteditable="true" aria-label="Write your letter here">
       <p> Anviiii,</p>
-      <p>Happy birthday my gurlll It’s been 1,095 days since we started this journey together three whole years of love, laughter, late-night talks, and everything in between. Even though it’s been four months since I last saw you. I still remember that last moment, the way you smiled and pinched my cheeks before we said goodbye it replays in my mind every time I close my eyes.
+      <p>Happy birthday my gurlll It’s been 994 days since we started this journey together three whole years of love, laughter, late-night talks, and everything in between. Even though it’s been four months since I last saw you. I still remember that last moment, the way you smiled and pinched my cheeks before we said goodbye it replays in my mind every time I close my eyes.
 Being away from you has taught me how strong what we have really is. Distance can’t touch the way my heart feels when I think of you. You’re not just my girlfriend  and my favorite part of every day.
 I wish I could be there right now to hold you close, to see your smile in person, to celebrate you the way you deserve. But until that day comes again, I’m sending you all my love, wrapped in every word of this message.
-Happy birthday, Mariyammm. I love you more than words will ever be able to say — and I can’t wait for the next time I get to say it to your face. ❤️
+Happy birthday, Mariyammm. I love you more than words will ever be able to say — and I can’t wait for the next time I get to say it to your face. ❤️ Pinneee photoes nokumbo oroonnilm tap chythh nokaneeee......
       </p>
     </div>
 
