--- a/pic.html
+++ b/pic.html
@@ -16,175 +16,175 @@
   <div class="gallery">
     <div class="flip-card">
       <div class="flip-inner">
-        <div class="flip-front"><img src="images/20250527_142651.jpg" alt="20250527_142651"></div>
+  <div class="flip-front"><img src="images/20250527_142651.jpg" alt="20250527_142651" loading="lazy"></div>
         <div class="flip-back" aria-hidden="true"><div class="back-content"><p>Oru break up kynj edtha foto 🥹</p></div></div>
       </div>
     </div>
 
     <div class="flip-card">
       <div class="flip-inner">
-        <div class="flip-front"><img src="images/20250603_134814.jpg" alt="20250603_134814"></div>
+  <div class="flip-front"><img src="images/20250603_134814.jpg" alt="20250603_134814" loading="lazy"></div>
         <div class="flip-back" aria-hidden="true"><div class="back-content"><p>Kalel nthoo kuthyt nikuan thonunnn 😁</p></div></div>
       </div>
     </div>
 
     <div class="flip-card">
       <div class="flip-inner">
-        <div class="flip-front"><img src="images/20250603_134829.jpg" alt="20250603_134829"></div>
+  <div class="flip-front"><img src="images/20250603_134829.jpg" alt="20250603_134829" loading="lazy"></div>
         <div class="flip-back" aria-hidden="true"><div class="back-content"><p>Kandaa ne ente tholl varee oll😏</p></div></div>
       </div>
     </div>
 
     <div class="flip-card">
       <div class="flip-inner">
-        <div class="flip-front"><img src="images/20250609_143033.jpg" alt="20250609_143033"></div>
+  <div class="flip-front"><img src="images/20250609_143033.jpg" alt="20250609_143033" loading="lazy"></div>
         <div class="flip-back" aria-hidden="true"><div class="back-content"><p>😁😍</p></div></div>
       </div>
     </div>
 
     <div class="flip-card">
       <div class="flip-inner">
-        <div class="flip-front"><img src="images/IMG-20230129-WA0002.jpg" alt="IMG-20230129-WA0002"></div>
+  <div class="flip-front"><img src="images/IMG-20230129-WA0002.jpg" alt="IMG-20230129-WA0002" loading="lazy"></div>
         <div class="flip-back" aria-hidden="true"><div class="back-content"><p>Ormayondooo ithhhh eehhhh 🫣</p></div></div>
       </div>
     </div>
 
     <div class="flip-card">
       <div class="flip-inner">
-        <div class="flip-front"><img src="images/IMG-20230129-WA0003.jpg" alt="IMG-20230129-WA0003"></div>
+  <div class="flip-front"><img src="images/IMG-20230129-WA0003.jpg" alt="IMG-20230129-WA0003" loading="lazy"></div>
         <div class="flip-back" aria-hidden="true"><div class="back-content"><p>first pick with uuuu pashe ne kollula ketaa🥱</p></div></div>
       </div>
     </div>
 
     <div class="flip-card">
       <div class="flip-inner">
-        <div class="flip-front"><img src="images/IMG-20230331-WA0000.jpg" alt="IMG-20230331-WA0000"></div>
+  <div class="flip-front"><img src="images/IMG-20230331-WA0000.jpg" alt="IMG-20230331-WA0000" loading="lazy"></div>
         <div class="flip-back" aria-hidden="true"><div class="back-content"><p>Ith amma ninne adymayit saree udupiche foto alliooo</p></div></div>
       </div>
     </div>
 
     <div class="flip-card">
       <div class="flip-inner">
-        <div class="flip-front"><img src="images/IMG-20230508-WA0015.jpg" alt="IMG-20230508-WA0015"></div>
+  <div class="flip-front"><img src="images/IMG-20230508-WA0015.jpg" alt="IMG-20230508-WA0015" loading="lazy"></div>
         <div class="flip-back" aria-hidden="true"><div class="back-content"><p>Ith kndond itayaa oru rasm😴</p></div></div>
       </div>
     </div>
 
     <div class="flip-card">
       <div class="flip-inner">
-        <div class="flip-front"><img src="images/IMG-20230508-WA0017.jpg" alt="IMG-20230508-WA0017"></div>
+  <div class="flip-front"><img src="images/IMG-20230508-WA0017.jpg" alt="IMG-20230508-WA0017" loading="lazy"></div>
         <div class="flip-back" aria-hidden="true"><div class="back-content"><p>Ah chat chyne ennod alio Gautami story itte😁</p></div></div>
       </div>
     </div>
 
     <div class="flip-card">
       <div class="flip-inner">
-        <div class="flip-front"><img src="images/IMG-20230621-WA0016.jpg" alt="IMG-20230621-WA0016"></div>
+  <div class="flip-front"><img src="images/IMG-20230621-WA0016.jpg" alt="IMG-20230621-WA0016" loading="lazy"></div>
         <div class="flip-back" aria-hidden="true"><div class="back-content"><p>Adyabayit mookuthy itit aycha foto</p></div></div>
       </div>
     </div>
 
     <div class="flip-card">
       <div class="flip-inner">
-        <div class="flip-front"><img src="images/IMG-20230819-WA0021.jpg" alt="IMG-20230819-WA0021"></div>
+  <div class="flip-front"><img src="images/IMG-20230819-WA0021.jpg" alt="IMG-20230819-WA0021" loading="lazy"></div>
         <div class="flip-back" aria-hidden="true"><div class="back-content"><p>Dhende ninte mathasreeyum neeyumm oreepolirknnn 😀</p></div></div>
       </div>
     </div>
 
     <div class="flip-card">
       <div class="flip-inner">
-        <div class="flip-front"><img src="images/IMG-20250325-WA0067.jpg" alt="IMG-20250325-WA0067"></div>
+  <div class="flip-front"><img src="images/IMG-20250325-WA0067.jpg" alt="IMG-20250325-WA0067" loading="lazy"></div>
         <div class="flip-back" aria-hidden="true"><div class="back-content"><p>Eeh foto enik ang istavaa athond ittyaaa🫣</p></div></div>
       </div>
     </div>
 
     <div class="flip-card">
       <div class="flip-inner">
-        <div class="flip-front"><img src="images/IMG-20250325-WA0070.jpg" alt="IMG-20250325-WA0070"></div>
+  <div class="flip-front"><img src="images/IMG-20250325-WA0070.jpg" alt="IMG-20250325-WA0070" loading="lazy"></div>
         <div class="flip-back" aria-hidden="true"><div class="back-content"><p>Ithummmmmm</p></div></div>
       </div>
     </div>
 
     <div class="flip-card">
       <div class="flip-inner">
-        <div class="flip-front"><img src="images/IMG-20250410-WA0017.jpg" alt="IMG-20250410-WA0017"></div>
+  <div class="flip-front"><img src="images/IMG-20250410-WA0017.jpg" alt="IMG-20250410-WA0017" loading="lazy"></div>
         <div class="flip-back" aria-hidden="true"><div class="back-content"><p>Evdoo povan neram aych thannayanaa ente ormaa</p></div></div>
       </div>
     </div>
 
     <div class="flip-card">
       <div class="flip-inner">
-        <div class="flip-front"><img src="images/IMG-20250420-WA0036.jpg" alt="IMG-20250420-WA0036"></div>
+  <div class="flip-front"><img src="images/IMG-20250420-WA0036.jpg" alt="IMG-20250420-WA0036" loading="lazy"></div>
         <div class="flip-back" aria-hidden="true"><div class="back-content"><p>Ithh kndond ityaa oru rasmm😁</p></div></div>
       </div>
     </div>
 
     <div class="flip-card">
       <div class="flip-inner">
-        <div class="flip-front"><img src="images/IMG-20250424-WA0022.jpg" alt="IMG-20250424-WA0022"></div>
+  <div class="flip-front"><img src="images/IMG-20250424-WA0022.jpg" alt="IMG-20250424-WA0022" loading="lazy"></div>
         <div class="flip-back" aria-hidden="true"><div class="back-content"><p>Ithhh sareeeeeee ayyo enna rasavaa🤩</p></div></div>
       </div>
     </div>
 
     <div class="flip-card">
       <div class="flip-inner">
-        <div class="flip-front"><img src="images/IMG-20250424-WA0054.jpg" alt="IMG-20250424-WA0054"></div>
+  <div class="flip-front"><img src="images/IMG-20250424-WA0054.jpg" alt="IMG-20250424-WA0054" loading="lazy"></div>
         <div class="flip-back" aria-hidden="true"><div class="back-content"><p>Ithummmmmmm</p></div></div>
       </div>
     </div>
 
     <div class="flip-card">
       <div class="flip-inner">
-        <div class="flip-front"><img src="images/IMG-20250425-WA0037.jpg" alt="IMG-20250425-WA0037"></div>
+  <div class="flip-front"><img src="images/IMG-20250425-WA0037.jpg" alt="IMG-20250425-WA0037" loading="lazy"></div>
         <div class="flip-back" aria-hidden="true"><div class="back-content"><p>Aduthe 3 foto yilm moghm kanan oknila foto ene matne menkedayondaa🥲</p></div></div>
       </div>
     </div>
 
     <div class="flip-card">
       <div class="flip-inner">
-        <div class="flip-front"><img src="images/IMG-20250425-WA0039.jpg" alt="IMG-20250425-WA0039"></div>
+  <div class="flip-front"><img src="images/IMG-20250425-WA0039.jpg" alt="IMG-20250425-WA0039" loading="lazy"></div>
         <div class="flip-back" aria-hidden="true"><div class="back-content"><p>🥲</p></div></div>
       </div>
     </div>
 
     <div class="flip-card">
       <div class="flip-inner">
-        <div class="flip-front"><img src="images/IMG-20250513-WA0093.jpg" alt="IMG-20250513-WA0093"></div>
+  <div class="flip-front"><img src="images/IMG-20250513-WA0093.jpg" alt="IMG-20250513-WA0093" loading="lazy"></div>
         <div class="flip-back" aria-hidden="true"><div class="back-content"><p>🥲</p></div></div>
       </div>
     </div>
 
     <div class="flip-card">
       <div class="flip-inner">
-        <div class="flip-front"><img src="images/IMG20230218133646.jpg" alt="IMG20230218133646"></div>
+  <div class="flip-front"><img src="images/IMG20230218133646.jpg" alt="IMG20230218133646" loading="lazy"></div>
         <div class="flip-back" aria-hidden="true"><div class="back-content"><p>Orkunnooooo🫣</p></div></div>
       </div>
     </div>
 
     <div class="flip-card">
       <div class="flip-inner">
-        <div class="flip-front"><img src="images/IMG_20230503_000620_0536.jpg" alt="IMG_20230503_000620_0536"></div>
+  <div class="flip-front"><img src="images/IMG_20230503_000620_0536.jpg" alt="IMG_20230503_000620_0536" loading="lazy"></div>
         <div class="flip-back" aria-hidden="true"><div class="back-content"><p>Kunj neeym ammeemmm</p></div></div>
       </div>
     </div>
     
     <div class="flip-card">
       <div class="flip-inner">
-        <div class="flip-front"><img src="images/IMG-20230405-WA0014-01.jpeg" alt="IMG-20230405-WA0014-01"></div>
+  <div class="flip-front"><img src="images/IMG-20230405-WA0014-01.jpeg" alt="IMG-20230405-WA0014-01" loading="lazy"></div>
         <div class="flip-back" aria-hidden="true"><div class="back-content"><p>Njn adyavayit edit chyth thanne foto🙂‍↕️</p></div></div>
       </div>
     </div>
 
     <div class="flip-card">
       <div class="flip-inner">
-        <div class="flip-front"><img src="images/IMG-20230819-WA0023 (1).jpg" alt="IMG-20230819-WA0023 (1)"></div>
+  <div class="flip-front"><img src="images/IMG-20230819-WA0023 (1).jpg" alt="IMG-20230819-WA0023 (1)" loading="lazy"></div>
         <div class="flip-back" aria-hidden="true"><div class="back-content"><p>Ashikkm niymmm miss chynonda Ashikneee🤔</p></div></div>
       </div>
     </div>
 
     <div class="flip-card">
       <div class="flip-inner">
-        <div class="flip-front"><img src="images/Snapchat-1942543559.jpg" alt="Snapchat-1942543559"></div>
+  <div class="flip-front"><img src="images/Snapchat-1942543559.jpg" alt="Snapchat-1942543559" loading="lazy"></div>
         <div class="flip-back" aria-hidden="true"><div class="back-content"><p>Firstt itta storyyy😁</p></div></div>
       </div>
     </div>
