--- a/index.html
+++ b/index.html
@@ -25,5 +25,6 @@
   <!-- music toggle (same control as other pages) -->
   <button class="music-toggle" aria-label="Play music">♪</button>
   <audio id="bgm" src="love.mp3" preload="none"></audio>
+  <script src="js/ripple.js"></script>
 </body>
 </html>
