--- a/letter.html
+++ b/letter.html
@@ -51,6 +51,7 @@ Happy birthday, Mariyammm. I love you more than words will ever be able to say â
       if(confirm('Clear the letter content?')) a.innerHTML = '<p>Dear Anviiii,</p><p></p>';
     });
   </script>
+  <script src="js/ripple.js"></script>
 
 </body>
 </html>
